[project]
name = "rniirs"
version = "0.1.0"
description = ""
authors = [
    {name = "vladislav1029",email = "vlad1090904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "aiogram (>=3.19.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
